testsuite/poke.pkl/struct-types-defun-diag-1.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int i;
    fun foo = void:
      {
        i = 2; /* { dg-error "invalid assignment" } */
      }
  };
